--- a/04_HTML/Praktikum/createProduct.html
+++ b/04_HTML/Praktikum/createProduct.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>04_HTML_Alterra</title>
+    <title>CreateProduct</title>
 </head>
 <body>
     <div class="createProduct">
