--- a/04_HTML/Praktikum/landingPage.html
+++ b/04_HTML/Praktikum/landingPage.html
@@ -1,51 +1,48 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-    <head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-
-    <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-
-    <title>Hello, world!</title>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>landingPage</title>
 </head>
 <body>
-    <!-- Navbar -->
-    <nav class="navbar navbar-light bg-light shadow-sm">
-        <div class="container-fluid">
-            <a class="navbar-brand fw-bold">Simple Header</a>
-        </div>
-    </nav>
-    
     <!-- Header -->
-    <header class="py-5">
-        <div class="container px-5 pb-5">
-            <div class="row gx-5 align-items-center">
-                <div class="col-xxl-5">
-                    <!-- Header text content-->
-                    <div class="content-head">
-                        <h1 class="display-6 fw-bold">Better Solutions For Your<br>Bussines</span></h1>
-                        <p class="text-muted">We are team of talented designers making websites with<br>Bootstrap</p><br>
-                        <div class="justify-content-center">
-                            <a class="btn btn-outline-dark btn-lg px-3 py-2 fs-6" href="">Get Started</a>
-                            <a class="btn btn-lg px-3 py-2 fs-6" href="">Watch Video</a>
-                        </div>
-                        <img src="./assets/hero-img-png.png" class="img-fluid" alt="...">
-                    </div>
-                </div>
-            </div>
-        </div>
+    <header>
+        <!-- Navbar -->
+        <nav class="navbar" id="simple-header">
+            Simple Header
+        </nav>
+        <hr>
     </header>
-    <!-- Optional JavaScript; choose one of the two! -->
 
-    <!-- Option 1: Bootstrap Bundle with Popper -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+    <!-- Section -->
+    <section>
+        <!-- Judul -->
+        <h1 class="heading-1" id="ini-judul">Better Solutions For Your<br>Business</h1>
+        <p>We are team of talented designers making websites with<br>Bootstrap</p>
 
-    <!-- Option 2: Separate Popper and Bootstrap JS -->
-    <!--
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
-    -->
+        <!-- Button -->
+        <button type="button">Get Started</button>
+        <button type="button">Watch Video</button>
+        <br>
+
+        <!-- Hero Section -->
+        <img src="./assets/hero-img-png.png" alt="ini-gambar" width="400">
+
+        <h1 class="join-page" id="my-join-page">Join Our Newsletter</h1>
+        <p>Tamen quem nulla quae legam multos aute sint culpa legam noster magna</p>
+        <form action="inputan">
+            <input type="text"><br>
+            <br>
+            <button type="button">Get Started</button>
+        </form>
+    </section>
+    <br>
+    <!-- Footer -->
+    <footer>
+        <hr>
+        <p>&copy; Copyright <b>Fadhil</b>.  All Rights Reserved</p>
+        <p>Designed by BootstrapMade</p>
+    </footer>
 </body>
 </html>
