--- a/04_HTML/Praktikum/landingPage.html
+++ b/04_HTML/Praktikum/landingPage.html
@@ -23,7 +23,7 @@
 
         <!-- Button -->
         <button type="button">Get Started</button>
-        <button type="button">Watch Video</button>
+        <a href="#">Watch Video</a>
         <br>
 
         <!-- Hero Section -->
