--- a/04_HTML/Praktikum/createProduct.html
+++ b/04_HTML/Praktikum/createProduct.html
@@ -12,7 +12,7 @@
         <h2>Detail Product</h2>
         <form>
             <label for="product-name">Product Name :</label><br>
-            <input type="text" id="product-name" name="productName" required minlength="6" maxlength="50"><br>
+            <input type="text" id="product-name" name="productName" minlength="6" maxlength="50" required><br>
             <label for="product-category">Product Category :</label><br>
             <select name="product-category" id="productCategory">
                 <option value="blank"></option>
@@ -37,7 +37,7 @@
 </div>
     <form>
         <label for="image-of-product">Image of Product</label>  
-        <input type="file" name="choose-file" id="choose-file">
+        <input type="file" name="choose-file" id="choose-file" required>
         <p><label for="additionalDesc">Additional Description</label></p>
         <textarea id="additionalDesc" name="additionalDesc" rows="8" cols="40"></textarea>
         <br>
