--- a/04_HTML/Praktikum/landingPage.html
+++ b/04_HTML/Praktikum/landingPage.html
@@ -18,23 +18,32 @@
     <!-- Section -->
     <section>
         <!-- Judul -->
-        <h1 class="heading-1" id="ini-judul">Better Solutions For Your<br>Business</h1>
-        <p>We are team of talented designers making websites with<br>Bootstrap</p>
+        <div>
+            <h1 class="heading-1" id="ini-judul">Better Solutions For Your<br>Business</h1>
+            <p>We are team of talented designers making websites with<br>Bootstrap</p>
+        </div>
 
         <!-- Button -->
-        <button type="button">Get Started</button>
-        <a href="#">Watch Video</a>
-        <br>
+        <div>
+            <a href="./createProduct.html"><button type="button">Get Started</button></a>
+            <a href="./createProduct.html">Watch Video</a>
+            <br>
+        </div>
 
         <!-- Hero Section -->
-        <img src="./assets/hero-img-png.png" alt="ini-gambar" width="400">
-
-        <h1 class="join-page" id="my-join-page">Join Our Newsletter</h1>
-        <p>Tamen quem nulla quae legam multos aute sint culpa legam noster magna</p>
+        <figure>
+            <img src="./assets/hero-img-png.png" alt="ini-gambar" width="400">
+        </figure>
+        <div>
+            <h1 class="join-page" id="my-join-page">Join Our Newsletter</h1>
+            <p>Tamen quem nulla quae legam multos aute sint culpa legam noster magna</p>
+        </div>
         <form action="inputan">
-            <input type="text"><br>
+            <input type="email"><br>
+        <div>
             <br>
-            <button type="button">Get Started</button>
+            <a href="./createProduct.html"><button type="button">Get Started</button></a>
+        </div>
         </form>
     </section>
     <br>
