--- a/06_Bootstrap/Praktikum/BS-createProduct/BS-createProduct.html
+++ b/06_Bootstrap/Praktikum/BS-createProduct/BS-createProduct.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>CreateProduct</title>
+
+    <!-- CSS -->
+    <link rel="stylesheet" href="style.css" />
+
     <!-- Bootstrap CSS -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
@@ -121,7 +125,6 @@
                     type="radio"
                     name="flexRadioDefault"
                     id="secondHand-2"
-                    checked
                   />
                   <label class="form-check-label" for="secondHand-2">
                     Second Hand
@@ -133,7 +136,6 @@
                     type="radio"
                     name="flexRadioDefault"
                     id="refurbished-3"
-                    checked
                   />
                   <label class="form-check-label" for="refurbished-3">
                     Refurbished
@@ -242,7 +244,7 @@
           </datalist>
         </div>
 
-        <div>
+        <div class="deletion-search mb-5">
           <div class="btn-group" role="group">
             <input
               type="radio"
