--- a/06_Bootstrap/Praktikum/BS-createProduct/BS-createProduct.html
+++ b/06_Bootstrap/Praktikum/BS-createProduct/BS-createProduct.html
@@ -72,36 +72,50 @@
         <section class="content" style="padding: 0px 120px">
           <div class="row">
             <h4 class="mb-4">Detail Product</h4>
-            <form action="#">
+
+            <form action="#" class="was-validated" novalidate>
               <div class="col-sm-5 mb-4">
                 <label for="productName" class="form-label">Product Name</label>
                 <input
                   type="text"
                   class="form-control"
                   id="productName"
-                  placeholder=""
-                  value=""
                   required
                 />
+                <div class="invalid-feedback">Please enter a product name.</div>
               </div>
 
-              <div class="col-sm-4 mb-4">
+              <div class="mb-4 col-sm-4">
                 <label for="productCategory" class="form-label"
                   >Product Category</label
                 >
-                <select class="form-select" id="productCategory" required>
-                  <option selected>Choose...</option>
+                <select
+                  class="form-select"
+                  id="productCategory"
+                  required
+                  aria-label="select example"
+                >
+                  <option value="">Choose...</option>
                   <option value="brandNew">Brand New</option>
                   <option value="secondHand">Second Hand</option>
                   <option value="refurbished">Refurbished</option>
                 </select>
+                <div class="invalid-feedback">
+                  Please choose product category.
+                </div>
               </div>
 
-              <div class="col-sm-4 mb-4">
+              <div class="mb-3 col-sm-4">
                 <label for="imageOfProduct" class="form-label"
                   >Image of Product</label
                 >
-                <input class="form-control" type="file" id="imageOfProduct" />
+                <input
+                  type="file"
+                  class="form-control"
+                  aria-label="file example"
+                  required
+                />
+                <div class="invalid-feedback">Please input .jpg file.</div>
               </div>
 
               <div class="mb-4">
@@ -110,50 +124,55 @@
                 >
                 <div class="form-check">
                   <input
-                    class="form-check-input"
                     type="radio"
-                    name="flexRadioDefault"
+                    class="form-check-input"
                     id="brandNew-1"
+                    name="radio-stacked"
+                    required
                   />
-                  <label class="form-check-label" for="brandNew-1">
-                    Brand New
-                  </label>
+                  <label class="form-check-label" for="brandNew-1"
+                    >Brand New</label
+                  >
                 </div>
                 <div class="form-check">
                   <input
-                    class="form-check-input"
                     type="radio"
-                    name="flexRadioDefault"
+                    class="form-check-input"
                     id="secondHand-2"
+                    name="radio-stacked"
+                    required
                   />
-                  <label class="form-check-label" for="secondHand-2">
-                    Second Hand
-                  </label>
+                  <label class="form-check-label" for="secondHand-2"
+                    >Second Hand</label
+                  >
                 </div>
                 <div class="form-check">
                   <input
-                    class="form-check-input"
                     type="radio"
-                    name="flexRadioDefault"
-                    id="refurbished-3"
+                    class="form-check-input"
+                    id="refurbished"
+                    name="radio-stacked"
+                    required
                   />
-                  <label class="form-check-label" for="refurbished-3">
-                    Refurbished
-                  </label>
+                  <label class="form-check-label" for="refurbished"
+                    >Refurbished</label
+                  >
+                  <div class="invalid-feedback">Choose one option.</div>
                 </div>
               </div>
 
               <div class="mb-5">
-                <label for="additionalDesc" class="mb-2"
+                <label for="additionalDesc" class="form-label"
                   >Additional Description</label
                 >
-                <div class="form-floating">
-                  <textarea
-                    class="form-control"
-                    id="additionalDesc"
-                    style="height: 160px"
-                  ></textarea>
-                </div>
+                <textarea
+                  class="form-control"
+                  id="additionalDesc"
+                  placeholder=""
+                  required
+                  style="height: 180px"
+                ></textarea>
+                <div class="invalid-feedback">Please enter a description.</div>
               </div>
 
               <div class="mb-5">
@@ -165,11 +184,21 @@
                   class="form-control"
                   id="productPrices"
                   placeholder="$ 1"
+                  required
                 />
+                <div class="invalid-feedback">Please enter a number.</div>
               </div>
 
               <div class="d-grid mb-5" style="padding-top: 120px">
-                <button class="btn btn-primary" type="submit">Submit</button>
+                <button
+                  class="btn btn-primary"
+                  type="submit"
+                  data-bs-toggle="tooltip"
+                  data-bs-placement="top"
+                  data-bs-title="submit your form"
+                >
+                  Submit
+                </button>
               </div>
             </form>
           </div>
@@ -267,9 +296,45 @@
             />
             <label class="btn btn-outline-primary" for="search">Search</label>
           </div>
+
+          <!-- Button trigger modal -->
+          <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
+            Modal Test
+          </button>
+
+          <!-- Modal -->
+          <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+            <div class="modal-dialog">
+              <div class="modal-content">
+                <div class="modal-header">
+                  <h1 class="modal-title fs-5" id="exampleModalLabel">Ini adalah Modal</h1>
+                  <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                  Modal bisa juga di sebut dengan pop up pada bootstrap adalah kotak dialog yang biasa di gunakan untuk melakukan konfirmasi . Selain itu modal juga bisa di gunakan untuk melakukan insert , delete, edit data dan form login .
+                </div>
+                <div class="modal-footer">
+                  <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                  <button type="button" class="btn btn-primary">Save</button>
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
       </section>
     </div>
     <!-- Container End -->
+
+    <!-- Bootstrap JS -->
+    <script
+      src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
+      integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.min.js"
+      integrity="sha384-cuYeSxntonz0PPNlHhBs68uyIAVpIIOZZ5JqeqvYYIcEL727kskC66kF92t6Xl2V"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
