--- a/06_Bootstrap/Praktikum/BS-landingPage/BS-landingPage.html
+++ b/06_Bootstrap/Praktikum/BS-landingPage/BS-landingPage.html
@@ -108,7 +108,7 @@
         <div class="container">
           <div class="row">
             <div class="col-lg-3 col-md-5 footer-contact">
-              <h3>Fadhil</h3>
+              <h3>Arsha</h3>
               <p>
                 A108 Adam Street <br />
                 New York, NY 535022<br />
@@ -179,14 +179,17 @@
       </div>
       <div class="container footer-bottom clearfix">
         <div class="copyright">
-          &copy; Copyright <strong><span>Fadhil</span></strong
+          &copy; Copyright <strong><span>Arsha</span></strong
           >. All Rights Reserved
         </div>
         <div class="design">
-          Designed by <a href="#">FadhilAlif</a>
+          Designed by <a href="#">Bootstrap</a>
         </div>
       </div>
     </section>
     <!-- Footer End -->
+
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.min.js" integrity="sha384-cuYeSxntonz0PPNlHhBs68uyIAVpIIOZZ5JqeqvYYIcEL727kskC66kF92t6Xl2V" crossorigin="anonymous"></script>
   </body>
 </html>
